# catcher-tippi

./: .gitignore  Cargo.toml  README.md
apps/nemotron-asr-host/: BackendProber.cs  Engines.cs  HostSession.cs  NemotronAsrHost.csproj  Program.cs  Protocol.cs
apps/nemotron-asr-host.tests/: EnginesTests.cs  HostSessionTests.cs  NemotronAsrHost.Tests.csproj  ProtocolTests.cs  RealModelTests.cs  StdioBlackBoxTests.cs
apps/tippi-windows/: App.xaml  App.xaml.cs  MainWindow.Tts.cs  MainWindow.VoiceCommand.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  THIRD_PARTY_NOTICES.md  Tippi.Windows.csproj  app.manifest
apps/tippi-windows.tests/: FourModelCoexistenceIntegrationTests.cs  InferenceBackendPolicyTests.cs  InferencePreferenceStoreTests.cs  ModelManifestTests.cs  NemotronIntegrationTests.cs  SpeakerDiarizationIntegrationTests.cs  SpeakerTranscriptFormatterTests.cs  TextInjectionCoordinatorTests.cs  Tippi.Windows.Tests.csproj  VoiceCommandIntegrationTests.cs  VoxCpmModelIntegrationTests.cs
crates/catcher-ffi/: Cargo.toml
crates/catcher-ffi/include/: catcher.h
crates/catcher-ffi/src/: kws.rs  lib.rs
crates/catcher-ffi/tests/: ffi_lifecycle.rs  ffi_smoke.c  kws_ffi.rs
crates/nemotron-cli/: Cargo.toml
crates/nemotron-cli/src/: main.rs
crates/nemotron-cli/tests/: cli.rs  transcribe_diar.rs
crates/nemotron-mlx/: Cargo.toml
crates/nemotron-mlx/src/: fusion.rs  lib.rs  opencc.rs  tokenizer.rs
crates/nemotron-mlx/src/audio/: log_mel.rs  mod.rs
crates/nemotron-mlx/src/backend/: mod.rs
crates/nemotron-mlx/src/model/: cache.rs  encoder.rs  layers.rs  mod.rs  prompt.rs  rnnt.rs  stream.rs
crates/nemotron-mlx/src/weights/: artifact.rs  manifest.rs  mod.rs
crates/nemotron-mlx/tests/: encoder_artifact.rs  encoder_streaming.rs  fusion.rs  incremental_stream.rs  log_mel.rs  model_layers.rs  opencc.rs  quantized_matmul.rs  real_checkpoint.rs  rnnt_decode.rs  tokenizer.rs  weight_manifest.rs  weight_roundtrip.rs
crates/sortformer-mlx/: Cargo.toml
crates/sortformer-mlx/src/: audio.rs  config.rs  lib.rs  segments.rs  weights.rs
crates/sortformer-mlx/src/model/: encoder.rs  mod.rs  ops.rs  transformer.rs
crates/sortformer-mlx/src/stream/: aosc.rs  diarizer.rs  mod.rs
crates/sortformer-mlx/tests/: aosc.rs  audio.rs  config.rs  diarizer_parity.rs  encoder_parity.rs  streaming_parity.rs  weights.rs
docs/: mini-apps-roadmap.md
scripts/: bootstrap-windows-host.md  build-asr-host.sh  build-nemotron-asr-host.ps1  build-recipe-bundle.sh  fetch-nemotron-onnx-model.ps1
tools/: export_sortformer_weights.py  generate_encoder_reference.py  generate_sortformer_reference.py  generate_sortformer_streaming_reference.py  generate_transcription_reference.py  make_conversation_fixture.py
(+150 files in other folders)
