[workspace]
members = ["crates/catcher-ffi", "crates/nemotron-cli", "crates/nemotron-convert", "crates/nemotron-mlx", "crates/sortformer-mlx"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MIT"
rust-version = "1.85"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
