[package]
name = "catcher-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
nemotron-mlx = { path = "../nemotron-mlx" }
sortformer-mlx = { path = "../sortformer-mlx" }
serde_json = "1"
sherpa-onnx = "1.13.4"

[dev-dependencies]
hound = "3"
