[package]
name = "nemotron-mlx"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mlx-rs = { version = "0.25.3", default-features = false, features = ["accelerate", "metal", "safetensors"] }
mlx-sys = { version = "=0.2.0", default-features = false, features = ["accelerate", "metal"] }
thiserror = "2"

[dev-dependencies]
approx = "0.5"
