[package]
name = "nemotron-mlx"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
half = "2"
mlx-rs = { version = "0.25.3", default-features = false, features = ["accelerate", "metal", "safetensors"] }
mlx-sys = { version = "=0.2.0", default-features = false, features = ["accelerate", "metal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
bytemuck = "1"
safetensors = "0.6"
