[package]
name = "sortformer-mlx"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
half = "2"
mlx-rs = { version = "0.25.3", default-features = false, features = ["accelerate", "metal", "safetensors"] }
nemotron-mlx = { path = "../nemotron-mlx" }
rustfft = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
hound = "3"
